# Arduino_Porting_Stm32

./: Arduino_Porting_Stm32.cpp  Arduino_Porting_Stm32.exe.recipe  Arduino_Porting_Stm32.sln  Arduino_Porting_Stm32.vcxproj  Arduino_Porting_Stm32.vcxproj.filters  CMakeLists.txt  README.md  arduino.obj.enc  platform_wire.obj.enc  vc143.idb  workspace.code-workspace
Arduino_.b81e58c6.tlog/: Arduino_Porting_Stm32.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
portingFirmare/: Arduino.cpp  Arduino.hpp  Arduino_Porting_Stm32.exe.recipe  Binary.hpp  HardwareSerial.cpp  HardwareSerial.h  Platform.cpp  Platform.hpp  Platform_HardwareSerial.cpp  Platform_HardwareSerial.h  Platform_Wire.cpp  Platform_Wire.hpp  Print.cpp  Stream.cpp  Stream.h  WString.h  vc143.idb
portingFirmare/Arduino_.b81e58c6.tlog/: Arduino_Porting_Stm32.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
portingFirmare/LCD_I2C/: LiquidCrystal_I2C.cpp  LiquidCrystal_I2C.h
portingFirmare/SPI/: SPI.cpp  SPI.h
portingFirmare/SPI/utility/: spi_com.c  spi_com.h
portingFirmare/Wire/: Wire.cpp  Wire.h
portingFirmare/avr/: dtostrf.c
